// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform > reconstruct 1`] = `
"const App = (__MACROS_props, __MACROS_props1) => {
        function onClick(__MACROS_props){
          return { foo: __MACROS_props.foo, baz: __MACROS_props1.baz.baz }
        };
        return [ __MACROS_props[0][0][1], __MACROS_props[1].id.foo[0], __MACROS_props1.baz ]
      }"
`;

exports[`transform > reconstruct arrowFunctionExpression 1`] = `
"const App = (__MACROS_props) => (
        <>{[__MACROS_props[0].root.foo]}</>
      )"
`;

exports[`transform > reconstruct default-prop 1`] = `
"
import { createPropsDefaultProxy as __MACROS_createPropsDefaultProxy } from "/vue-macros/jsx-directive/with-defaults";
import { createPropsRestProxy as __MACROS_createPropsRestProxy } from "vue";function App(__MACROS_props, __MACROS_props1){
const __MACROS_default_props = __MACROS_createPropsDefaultProxy(__MACROS_props, {'.foo': 'bar'});
const __MACROS_default_props1 = __MACROS_createPropsDefaultProxy(__MACROS_props1, {'[0]': 'foo'});
const rest = __MACROS_createPropsRestProxy(__MACROS_default_props, ['foo', 'baz']);
        return <>{[__MACROS_default_props.foo, __MACROS_default_props.baz, rest, __MACROS_default_props1[0]]}</>
      }"
`;

exports[`transform > reconstruct rest-prop 1`] = `
"
import { createPropsDefaultProxy as __MACROS_createPropsDefaultProxy } from "/vue-macros/jsx-directive/with-defaults";
import { createPropsRestProxy as __MACROS_createPropsRestProxy } from "vue";function App(__MACROS_props){
const __MACROS_default_props = __MACROS_createPropsDefaultProxy(__MACROS_props, {'.bar': 1});
const rest = __MACROS_createPropsRestProxy(__MACROS_default_props, ['foo', 'bar']);
        return <>{[__MACROS_default_props.foo, __MACROS_default_props.bar, rest]}</>
      }"
`;

exports[`transform > unwrap ref 1`] = `
"
import { createPropsDefaultProxy as __MACROS_createPropsDefaultProxy } from "/vue-macros/jsx-directive/with-defaults";
import { createPropsRestProxy as __MACROS_createPropsRestProxy } from "vue";function App(__MACROS_props){
const __MACROS_default_props = __MACROS_createPropsDefaultProxy(__MACROS_props, {'[1].value': 1});
const rest = __MACROS_createPropsRestProxy(__MACROS_default_props, ['foo', 'bar']);
      return <>{[__MACROS_default_props[0].value, __MACROS_default_props[1].value, rest]}</>
      }"
`;
